{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 180,
  "lineage": "f10e8280-333f-aeec-2313-7f381b2e150f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "db_instance_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049868d175a97831f",
            "association_id": "eipassoc-0e0a00d4c852cb149",
            "domain": "vpc",
            "id": "eipalloc-049868d175a97831f",
            "instance": "i-06dd224b6c6f39b1d",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0b56a5612e47c8b62",
            "private_dns": "ip-10-128-0-24.us-west-1.compute.internal",
            "private_ip": "10.128.0.24",
            "public_dns": "ec2-52-8-170-147.us-west-1.compute.amazonaws.com",
            "public_ip": "52.8.170.147",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "db_instance_eip_0"
            },
            "tags_all": {
              "Name": "db_instance_eip_0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.db_instance",
            "aws_internet_gateway.default",
            "aws_key_pair.deployer",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:984083517127:loadbalancer/automated-vpc-elb",
            "availability_zones": [
              "us-west-1a"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "automated-vpc-elb-1833567156.us-west-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 15,
                "target": "HTTP:80/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "automated-vpc-elb",
            "idle_timeout": 60,
            "instances": [
              "i-05accfd439a383c37",
              "i-0dc7f527b99761562"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "automated-vpc-elb",
            "security_groups": [
              "sg-007079b967819d7be",
              "sg-0a79637dfabdbcfc7"
            ],
            "source_security_group": "984083517127/default-automated-vpc",
            "source_security_group_id": "sg-007079b967819d7be",
            "subnets": [
              "subnet-0bd3ca9841a578640"
            ],
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_instance.app",
            "aws_instance.nat",
            "aws_internet_gateway.default",
            "aws_key_pair.deployer",
            "aws_security_group.default",
            "aws_security_group.nat",
            "aws_security_group.web",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f42d8c4eb586ccf7",
            "arn": "arn:aws:ec2:us-west-1:984083517127:instance/i-05accfd439a383c37",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05accfd439a383c37",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "automated-vpc",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08ff7315ccbfbaefe",
            "private_dns": "ip-10-128-1-121.us-west-1.compute.internal",
            "private_ip": "10.128.1.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000af8e36371f95ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-007079b967819d7be"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02bcbc6ad97894d4d",
            "tags": {
              "Name": "automated-app-0"
            },
            "tags_all": {
              "Name": "automated-app-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-007079b967819d7be"
            ]
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_internet_gateway.default",
            "aws_key_pair.deployer",
            "aws_security_group.default",
            "aws_security_group.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f42d8c4eb586ccf7",
            "arn": "arn:aws:ec2:us-west-1:984083517127:instance/i-0dc7f527b99761562",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dc7f527b99761562",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "automated-vpc",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-000917429867036ad",
            "private_dns": "ip-10-128-2-197.us-west-1.compute.internal",
            "private_ip": "10.128.2.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ed0c3eeecf0c1e8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-007079b967819d7be"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad660b47d1c8ddac",
            "tags": {
              "Name": "automated-app-1"
            },
            "tags_all": {
              "Name": "automated-app-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-007079b967819d7be"
            ]
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_internet_gateway.default",
            "aws_key_pair.deployer",
            "aws_security_group.default",
            "aws_security_group.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f42d8c4eb586ccf7",
            "arn": "arn:aws:ec2:us-west-1:984083517127:instance/i-06dd224b6c6f39b1d",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06dd224b6c6f39b1d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "automated-vpc",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b56a5612e47c8b62",
            "private_dns": "ip-10-128-0-24.us-west-1.compute.internal",
            "private_ip": "10.128.0.24",
            "public_dns": "ec2-52-8-170-147.us-west-1.compute.amazonaws.com",
            "public_ip": "52.8.170.147",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-085b7cffac7807f44",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bd3ca9841a578640",
            "tags": {
              "Name": "rds_instance_0"
            },
            "tags_all": {
              "Name": "rds_instance_0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a79637dfabdbcfc7"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_key_pair.deployer",
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f42d8c4eb586ccf7",
            "arn": "arn:aws:ec2:us-west-1:984083517127:instance/i-0cfd8224e3dec96a0",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfd8224e3dec96a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "automated-vpc",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f8de6a4b2f497925",
            "private_dns": "ip-10-128-0-77.us-west-1.compute.internal",
            "private_ip": "10.128.0.77",
            "public_dns": "ec2-54-241-200-115.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.200.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce14d291b84240a0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-007079b967819d7be",
              "sg-0a9e564cef7d310f3"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0bd3ca9841a578640",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-007079b967819d7be",
              "sg-0a9e564cef7d310f3"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_key_pair.deployer",
            "aws_security_group.default",
            "aws_security_group.nat",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:984083517127:internet-gateway/igw-0c1bf75531773895d",
            "id": "igw-0c1bf75531773895d",
            "owner_id": "984083517127",
            "vpc_id": "vpc-0877635005d3af2e1"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:984083517127:route-table/rtb-04a7e7999a195da2f",
            "id": "rtb-04a7e7999a195da2f",
            "owner_id": "984083517127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "i-0cfd8224e3dec96a0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my private RT"
            },
            "tags_all": {
              "Name": "my private RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0877635005d3af2e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.nat",
            "aws_internet_gateway.default",
            "aws_key_pair.deployer",
            "aws_security_group.default",
            "aws_security_group.nat",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:984083517127:route-table/rtb-025f3f4cb1176532c",
            "id": "rtb-025f3f4cb1176532c",
            "owner_id": "984083517127",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c1bf75531773895d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my public RT"
            },
            "tags_all": {
              "Name": "my public RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0877635005d3af2e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eafd365a9774cb86",
            "route_table_id": "rtb-04a7e7999a195da2f",
            "subnet_id": "subnet-02bcbc6ad97894d4d"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_internet_gateway.default",
            "aws_key_pair.deployer",
            "aws_route_table.private",
            "aws_security_group.default",
            "aws_security_group.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e63261dd88af95a",
            "route_table_id": "rtb-04a7e7999a195da2f",
            "subnet_id": "subnet-0ad660b47d1c8ddac"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_internet_gateway.default",
            "aws_key_pair.deployer",
            "aws_route_table.private",
            "aws_security_group.default",
            "aws_security_group.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007c28cea8fd31fc4",
            "route_table_id": "rtb-025f3f4cb1176532c",
            "subnet_id": "subnet-0bd3ca9841a578640"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:984083517127:security-group/sg-0020ab0685369e648",
            "description": "Security Group for RDS Databases",
            "egress": [],
            "id": "sg-0020ab0685369e648",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from only the websecurity group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a79637dfabdbcfc7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_server_sg",
            "name_prefix": "",
            "owner_id": "984083517127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_server_sg"
            },
            "tags_all": {
              "Name": "db_server_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0877635005d3af2e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:984083517127:security-group/sg-007079b967819d7be",
            "description": "Default security group that allows inbound and outbound traffic from all instances in the VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-007079b967819d7be",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default-automated-vpc",
            "name_prefix": "",
            "owner_id": "984083517127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default"
            },
            "tags_all": {
              "Name": "default"
            },
            "timeouts": null,
            "vpc_id": "vpc-0877635005d3af2e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:984083517127:security-group/sg-0a9e564cef7d310f3",
            "description": "Security group for nat instances that allows SSH and VPN traffic from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9e564cef7d310f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nat-automated-SG",
            "name_prefix": "",
            "owner_id": "984083517127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0877635005d3af2e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:984083517127:security-group/sg-0a79637dfabdbcfc7",
            "description": "Security group for web that allows web traffic from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a79637dfabdbcfc7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-automated-SG",
            "name_prefix": "",
            "owner_id": "984083517127",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0877635005d3af2e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:984083517127:subnet/subnet-02bcbc6ad97894d4d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.128.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02bcbc6ad97894d4d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "984083517127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_0"
            },
            "tags_all": {
              "Name": "private_subnet_0"
            },
            "vpc_id": "vpc-0877635005d3af2e1"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_internet_gateway.default",
            "aws_key_pair.deployer",
            "aws_security_group.default",
            "aws_security_group.nat",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:984083517127:subnet/subnet-0ad660b47d1c8ddac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.128.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad660b47d1c8ddac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "984083517127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_1"
            },
            "tags_all": {
              "Name": "private_subnet_1"
            },
            "vpc_id": "vpc-0877635005d3af2e1"
          },
          "dependencies": [
            "aws_instance.nat",
            "aws_internet_gateway.default",
            "aws_key_pair.deployer",
            "aws_security_group.default",
            "aws_security_group.nat",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:984083517127:subnet/subnet-0bd3ca9841a578640",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.128.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd3ca9841a578640",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "984083517127",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my public subnet"
            },
            "tags_all": {
              "Name": "my public subnet"
            },
            "vpc_id": "vpc-0877635005d3af2e1"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:984083517127:vpc/vpc-0877635005d3af2e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.128.0.0/16",
            "default_network_acl_id": "acl-097a3cb2fa2268873",
            "default_route_table_id": "rtb-01ab83759d3b8aadc",
            "default_security_group_id": "sg-0d119543f3e077d83",
            "dhcp_options_id": "dopt-02b3aac8e89828199",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0877635005d3af2e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01ab83759d3b8aadc",
            "owner_id": "984083517127",
            "tags": {
              "Name": "automated"
            },
            "tags_all": {
              "Name": "automated"
            }
          }
        }
      ]
    }
  ]
}